welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:16: error: '=' expected but identifier found.
def faire/(c:Color)
         ^PatternPicture:17: error: illegal start of simple expression
{marquerSol(c);avance();gauche();avance();gauche();marquerSol(c);avance();gauche();avance();gauche()} 
^